--- a/APP/app/src/main/res/layout/activity_chat.xml
+++ b/APP/app/src/main/res/layout/activity_chat.xml
@@ -8,20 +8,34 @@
     android:background="@drawable/background_gradient"
      >
 
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_chat"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/background_rounded"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="120dp"
         android:layout_marginBottom="64dp"
-        android:background="@android:color/white"
+        android:background="@drawable/background_rounded"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.9"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="1.0">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_chat"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="100dp"
+            android:background="@android:color/white"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.9"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <EditText
         android:id="@+id/input_mensagem"
@@ -36,8 +50,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.176"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/recycler_chat"
-        app:layout_constraintVertical_bias="0.685" />
+        app:layout_constraintTop_toBottomOf="@+id/background_rounded"
+        app:layout_constraintVertical_bias="0.50" />
 
     <Button
         android:id="@+id/btnEnviarChat"
