Adição da tela de Humor

--- a/APP/app/src/main/res/layout/activity_cadastro.xml
+++ b/APP/app/src/main/res/layout/activity_cadastro.xml
@@ -7,4 +7,49 @@
     tools:context=".CadastroActivity"
     android:background="@drawable/background_gradient">
 
+    <TextView
+        android:id="@+id/label_email"
+        android:layout_width="wrap_content"
+        android:layout_height="23dp"
+        android:clickable="false"
+        android:gravity="center_horizontal"
+        android:text="@string/label_email"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.111"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.268" />
+
+    <TextView
+        android:id="@+id/label_pular2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:text="@string/label_pular"
+        android:textColor="@color/white"
+        app:layout_constraintEnd_toEndOf="@+id/input_email"
+        app:layout_constraintTop_toBottomOf="@+id/input_email" />
+
+    <EditText
+        android:id="@+id/input_email"
+        android:layout_width="331dp"
+        android:layout_height="23dp"
+        android:layout_marginTop="12dp"
+        android:background="@color/white"
+        android:ems="10"
+        android:inputType="textEmailAddress"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/label_email"
+        app:layout_constraintTop_toBottomOf="@+id/label_email"
+        android:autofillHints="@string/exemplo_email"
+        android:hint="@string/exemplo_email"/>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
