--- a/APP/app/src/main/res/drawable-v24/background_gradient.xml
+++ b/APP/app/src/main/res/drawable-v24/background_gradient.xml
@@ -4,7 +4,7 @@
         <shape>
             <gradient
                 android:angle="90"
-                android:startColor="@color/white"
+                android:startColor="@android:color/white"
                 android:endColor="@color/colorPrimary"
                 android:type="linear" />
         </shape>
